:hammer: home scene routing controller added

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -61,7 +62,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.schooladministrator/com.example.schooladministrator.HelloApplication
+                                com.example.schooladministrator/com.example.schooladministrator.HomeApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
